--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "iview": "^2.4.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
